--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,9 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&display=swap');
 
-a {
-  color: #00b7ff;
+body {
+  font-family: Noto Sans;
+  margin: 0;
+  padding: 0;
 }
 
 h1 {
