styled signup view

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -77,8 +77,8 @@
 
 <form class="round-border" action="/login" method="POST">
     <label class="text-border" >Username</label>
-    <input class="round-border"  type="text" name="username">
+    <input class="round-border"  type="text" name="username" required>
     <label class="text-border" >Password</label>
-    <input class="round-border"  type="text" name="password">
+    <input class="round-border"  type="text" name="password" required>
     <button class="text-border round-border" type="submit" >Log In</button>
 </form>
