--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,6 +6,11 @@ body {
   padding: 0;
 }
 
-h1 {
-  color: 15px;
+.text-border{
+  -webkit-text-stroke-width: .5px;
+  -webkit-text-stroke-color: black;
+}
+.round-border{
+  border-radius: 25px;
+  border: 1px solid black;
 }
