--- a/views/currently-reading.hbs
+++ b/views/currently-reading.hbs
@@ -1,1 +1,93 @@
+<style>
+    body{
+        background-color: #D1495B;
+    }
+    h1{
+        color: white;
+        margin: 25px;
+        font-size: 35px;
+        text-align: center;
+        -webkit-text-stroke-width: 1.5px;
+        -webkit-text-stroke-color: black;
+    }
+    .book{
+        background-color: rgb(48, 99, 142,.40);
+        margin: 15px;
+        border-radius: 25px;
+        display: flex;
+
+    }
+    img{
+        margin: 25px 0 0 25px;
+        box-shadow: 5px 5px 10px #091a29;
+        height: 160px;
+    }
+    #delete{
+        margin: 10px 32px;
+        padding: 3px 20px;
+        font-size: 16px;
+        font-weight: bold;
+        color:#D1495B
+    }
+    #right{
+        margin: 25px 25px 25px 0;
+        text-align: center;
+    }
+    h5{
+        color: white;
+        font-size: 25px;
+        margin: 0;
+        -webkit-text-stroke-width: 1px;
+        -webkit-text-stroke-color: black;
+    }
+    h6{
+        color: white;
+        font-size: 16px;
+        margin: 5px 0;
+        -webkit-text-stroke-width: .6px;
+        -webkit-text-stroke-color: black;
+    }
+    select{
+        padding: 3px 15px;
+        font-size: 16px;
+        text-align: center;
+        margin-top: 20px;
+        font-family: Noto Sans;
+    }
+    #edit{
+        padding: 3px 20px;
+        font-size: 16px;
+        font-weight: bold;
+        color:#D1495B;
+        margin-top: 10px;
+    }
+</style>
+
+
 <h1>Currently Reading</h1>
+
+{{# each books}}
+
+    <div class="book">
+        <div id="left">
+            <img src={{this.cover}}>
+            <form action="/{{this._id}}/delete" method="POST">
+                <button id="delete" class="text-border round-border" type="submit">Delete</button>
+            </form>
+        </div>
+
+        <div id="right">
+            <h5>{{this.title}}</h5>
+            <h6>by {{this.author}}</h6>
+            <form action="/{{this._id}}/edit" method="POST">
+            <select class="round-border" name="books" placeholder={{this.listType}}>
+                <option value="already">Already read</option>
+                <option value="currently">Currently reading</option>
+                <option value="want">Want to read</option>
+            </select>
+            <button id="edit" class="round-border text-border" type="submit">Edit</button>
+            </form>
+        </div>
+    </div>
+    
+{{/each}}
